fixed distortion of text when zooming and centered

--- a/views/LibMapperMatrixView_style.css
+++ b/views/LibMapperMatrixView_style.css
@@ -88,7 +88,8 @@ a:hover { color: #036; }
 }
 
 .label{
-	font-size: 14px;		
+	font-size: 14px;
+	fill: #3e3e3e;
 }
 .label_over{
 	font-size: 14px;
